Fix header on narrow phones
Makes the mobile header use flexbox, only net change for regular length titled wikis is the search box is positioned differently on wider displays, like tablets.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,24 @@
 /* Hydra CSS customizations for the Minerva mobile skin */
 
 .content { max-width: calc(100% - 32px); }
+
+/* Mobile header fixes for narrow width */
+.header {
+    width: 99%;
+    display: flex;
+}
+
+.header > div {
+    align-self: center;
+}
+
+.header .branding-box {
+    overflow: hidden;
+    flex-grow: 2;
+}
+
+.header .branding-box span {
+    text-overflow: ellipsis;
+    max-width: 100%;
+    overflow: hidden;
+}
